--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
+    "react-custom-scroll": "^4.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
